<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesActivity">


    <ImageView
        android:id="@+id/imageRec"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:elevation="8dp"
        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal"
                android:text="@string/recipe_name"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:hint="@string/type_cuisine"/>
            <TextView
                android:id="@+id/mealType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="normal"
                android:textColor="@android:color/holo_orange_dark"
                android:gravity="center_horizontal"
                android:hint="@string/meal_type"/>

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:hint="@string/difficulty"/>
            <TextView
                android:id="@+id/cookTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="normal"
                android:textColor="@android:color/holo_orange_dark"
                android:gravity="center_horizontal"
                android:hint="@string/cook_time"
                />
            <TextView
                android:id="@+id/prepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="normal"
                android:textColor="@android:color/holo_orange_dark"
                android:gravity="center_horizontal"
                android:hint="@string/prep_time"
                />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@android:color/holo_orange_dark"
                android:gravity="center_horizontal"
                android:hint="@string/ingredients"
                />
            <TextView
                android:id="@+id/instruccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/purple_700"
                android:gravity="center_horizontal"
                android:hint="@string/instruccion"/>





        </LinearLayout>



    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>
